# src/routes/index.js
@@ -8,6 +8,8 @@ const question = require('~/routes/question')
 const resourcesCategory = require('~/routes/resourcesCategory')
 const offer = require('~/routes/offer')
 const locationRoutes = require('~/routes/location')
+const category = require('~/routes/category')
+
 
 router.use('/auth', auth)
 router.use('/users', user)
@@ -17,5 +19,6 @@ router.use('/questions', question)
 router.use('/resources-categories', resourcesCategory)
 router.use('/offers', offer)
 router.use('/locations', locationRoutes)
+router.use('/categories', category)
 
 module.exports = router
